--- a/team.html
+++ b/team.html
@@ -119,33 +119,33 @@
           <div class="row"> 
         <section class="developer-profiles">
           <div class="profile-card">
-            <img src="PersonalCards/Rahul.jpg" class="dev1" alt="Developer 1">
+            <img src="" class="dev1" alt="Developer 1">
             <h5>RAHUL DAWPERSAD</h5>
             <p>FRONTEND DEVELOPER</p>
             <div class="contact-icons">
-              <a href="mailto:john@example.com"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.linkedin.com/in/johndoe"><i class="fa fa-instagram"></i></a>
-              <a href="tel:+1234567890"><i class="fa fa-whatsapp"></i></a>
+              <a href=""><i class="fa fa-facebook"></i></a>
+              <a href=""><i class="fa fa-instagram"></i></a>
+              <a href=""><i class="fa fa-whatsapp"></i></a>
             </div>
           </div>
           <div class="profile-card">
-            <img src="PersonalCards/Joeman.jpg" alt="Developer 2">
+            <img src="" alt="Developer 2">
             <h5>JOEMAN LUKANDA</h5>
             <p>FRONTEND DEVELOPER</p>
             <div class="contact-icons">
-              <a href="mailto:jane@example.com"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.linkedin.com/in/janesmith"><i class="fa fa-instagram"></i></a>
-              <a href="tel:+1987654321"><i class="fa fa-whatsapp"></i></a>
+              <a href=""><i class="fa fa-facebook"></i></a>
+              <a href=""><i class="fa fa-instagram"></i></a>
+              <a href=""><i class="fa fa-whatsapp"></i></a>
             </div>
           </div>
           <div class="profile-card">
-            <img src="PersonalCards/Micah.jpg" alt="Developer 3">
+            <img src="" alt="Developer 3">
             <h5>MICAH GOVENDER</h5>
             <p>FRONTEND DEVELOPER</p>
             <div class="contact-icons">
-              <a href="mailto:david@example.com"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.linkedin.com/in/davidbrown"><i class="fa fa-instagram"></i></a>
-              <a href="tel:+1357924680"><i class="fa fa-whatsapp"></i></a>
+              <a href=""><i class="fa fa-facebook"></i></a>
+              <a href=""><i class="fa fa-instagram"></i></a>
+              <a href=""><i class="fa fa-whatsapp"></i></a>
             </div>
           </div>
         </section>
